hot fix header background  on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ body {
   .hero {
     background-size: 100%;
     background-position: top right;
+    margin-top: 60px;
   }
 }
 /*# sourceMappingURL=style.css.map */
