--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -17,3 +17,4 @@
     .hero
         background-size: 100%
         background-position: top right
+        margin-top: 60px
